src/tests/render_snapshots/snapshots/sabiql__render_snapshots__result_pane__result_pane_first_cell_active_mode.snap
---
source: src/tests/render_snapshots/result_pane.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││Owner:   postgres                                                                                                         │
│  public.comments                      ││Comment: User accounts                                                                                                    │
│                                       ││Rows:    ~100                                                                                                             │
│                                       ││Schema:  public                                                                                                           │
│                                       ││Table:   users                                                                                                            │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                                       │┌ [3] Result (2 rows, 15ms) ───────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││id   name    email                                                                                                        │
│                                       ││1    Alice   alice@example.com                                                                                            │
│                                       ││2    Bob     bob@example.com                                                                                              │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Enter:Detail  Y:Yank Cell  yy:Yank Row  K:Row Detail  dd:Stage Del  ?:Help  Esc:Back  q:Quit
